add a_star to CMakeLists.txt as library

--- a/workspace/src/dirac_description/CMakeLists.txt
+++ b/workspace/src/dirac_description/CMakeLists.txt
@@ -18,7 +18,7 @@ include_directories(
 
 # Add the dirac_control executable
 add_executable(dirac_control src/dirac_control.cpp)
-target_link_libraries(dirac_control ${catkin_LIBRARIES})
+target_link_libraries(dirac_control ${catkin_LIBRARIES} a_star)
 
 # Add the lidar_listener executable
 add_executable(lidar_listener src/lidar_listener.cpp)
@@ -26,4 +26,4 @@ target_link_libraries(lidar_listener ${catkin_LIBRARIES})
 add_dependencies(lidar_listener ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 
-
+add_library(a_star src/a_star/a_star.cpp src/a_star/node.cpp src/a_star/heap/heap.cpp)
